--- a/sololearn/function.html
+++ b/sololearn/function.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- <p>James Smith</p> -->
     <script>
         // function test(number) {
         //     while (number < 5) {
@@ -33,10 +34,69 @@
         // }
         // document.write(x);
 
-        function multNmbrs(a, b) {
-            var c = a * b;
-        }
-        multNmbrs(2, 6);
+        // function multNmbrs(a, b) {
+        //     var c = a * b;
+        // }
+        // multNmbrs(2, 6);
+
+
+        // let x = 9;
+        // x *= 2;
+        // console.log(x / 3);
+
+        // let status = (hour > 18) ? "Closed" : "Open";
+
+        // let x = 0;
+        // for (let i = 0; i < 3; i++) {
+        //     x += i;
+        // }
+        // console.log(x);
+
+        // for (let i = 10; i > 0; i -= 2) {
+        //     if (i < 7) {
+        //         break;
+        //     }
+        //     console.log(i);
+        // }
+
+
+        // let sum = 0;
+        // for (let i = 5; i < 8; i++) {
+        //     if (i == 6) {
+        //         continue;
+        //     }
+        //     sum += i;
+        // }
+        // console.log(sum);
+
+
+        // let x = [1, 2, 3];
+        // x[3] = x[0] + x[2];
+        // console.log(x[3] / x[1]);
+
+        // let nums = [1, 2, 3];
+        // let x = 1;
+
+        // for (let i = 0; i < 3; i++) {
+        //     x *= nums[i];
+        // }
+        // console.log(x);
+
+
+        // function test(a, b) {
+        //     if (a > b) {
+        //         return a * b;
+        //     } else {
+        //         return b / a;
+        //     }
+        // }
+        // alert(test(5, 15));
+
+        let x = 8;
+        let y = 2;
+        x -= y;
+        y += 1;
+        console.log(x / y);
     </script>
 </body>
 
